Update on Image Urls

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cool-blog",
-  "home":"https://trip187.github.io/cool-blog/",
+ "homepage": "https://trip187.github.io/cool-blog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
